--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   app:
     build:
       args:
-        user: ${USER}
+        user: MarcioBastos
         uid: 1000
       context: ./
       dockerfile: ./docker-compose/app/Dockerfile
