--- a/docker-compose/php/php.ini
+++ b/docker-compose/php/php.ini
@@ -362,7 +362,7 @@ zend.enable_gc = On
 ;zend.script_encoding =
 
 ; Allows to include or exclude arguments from stack traces generated for exceptions.
-; In production, it is recommended to turn this setting on to prohibit the output
+; In production, it is recommended to turn this setting on to prohibit the output 
 ; of sensitive information in stack traces
 ; Default: Off
 zend.exception_ignore_args = On
@@ -385,7 +385,7 @@ expose_php = On
 ; Maximum execution time of each script, in seconds
 ; http://php.net/max-execution-time
 ; Note: This directive is hardcoded to 0 for the CLI SAPI
-max_execution_time = 60
+max_execution_time = 30
 
 ; Maximum amount of time each script may spend parsing request data. It's a good
 ; idea to limit this time on productions servers in order to eliminate unexpectedly
@@ -395,7 +395,7 @@ max_execution_time = 60
 ; Development Value: 60 (60 seconds)
 ; Production Value: 60 (60 seconds)
 ; http://php.net/max-input-time
-max_input_time = -1
+max_input_time = 60
 
 ; Maximum input variable nesting level
 ; http://php.net/max-input-nesting-level
@@ -406,7 +406,7 @@ max_input_time = -1
 
 ; Maximum amount of memory a script may consume
 ; http://php.net/memory-limit
-memory_limit = 1024M
+memory_limit = 128M
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -911,7 +911,7 @@ default_socket_timeout = 60
 ;   Be sure to appropriately set the extension_dir directive.
 ;
 ;extension=bz2
-extension=curl
+;extension=curl
 ;extension=ffi
 ;extension=ftp
 ;extension=fileinfo
@@ -933,7 +933,7 @@ extension=curl
 ;extension=pdo_odbc
 ;extension=pdo_pgsql
 ;extension=pdo_sqlite
-extension=pgsql
+;extension=pgsql
 ;extension=shmop
 
 ; The MIBS data available in the PHP distribution must be installed.
