--- a/.env.example
+++ b/.env.example
@@ -31,8 +31,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=suporte@engpaullasilva.com.br
+MAIL_PASSWORD=x4LT%O9nfCOHx
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
